# lab04

./: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
.github/рабочие процессы/: CI.yml  main.yml
